# cmake-cpp-hello-world-library

./: CMakeLists.txt  LICENSE
inc/: helloWorld.hh
src/: helloWorld.cpp
